--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,7 @@ body {
 }
 
 .wrapper {
+	box-shadow: 0px 0px 200px 10px #111;
 	position: relative;
 	width: $paper-width;
 	height: $paper-height;
